--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# idan's add:
+.idea/*
